feat: statistical api
