# docs/openapi.yaml
@@ -197,6 +197,34 @@ paths:
           description: Unauthorized
         '500':
           description: Internal Server Error
+  /statistics:
+    get:
+      tags:
+        - Statistics
+      summary: Get statistics
+      description: Get statistics about the posts
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  data:
+                    type: array
+                    items:
+                      $ref: './schemas.yaml#/components/schemas/GetStatisticsResponse'
+        '400':
+          description: Bad Request
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal Server Error
 components:
   securitySchemes:
     bearerAuth:
